--- a/_teaching/2022-23-OZP.md
+++ b/_teaching/2022-23-OZP.md
@@ -1,13 +1,12 @@
 ---
 title: "Information Sciences Bachelor thesis supervision"
 collection: teaching
-# type: "Human Computer Interaction / Business Informatics master course"
+type: "Supervision"
 permalink: /teaching/2022-23-OZP
 venue: "Utrecht University"
-# date: "Continuous"
+date: 2023-01-01
 location: "Utrecht, The Netherlands"
 ---
 
-2022-2023: 1 student (ongoing)
-
-2021-2022: 1 student
+* 2022-2023: 1 student (ongoing)
+* 2021-2022: 1 student
