Small teaching edits

--- a/_teaching/2021-22-blok1-MMI.md
+++ b/_teaching/2021-22-blok1-MMI.md
@@ -8,14 +8,15 @@ date: 2021-09-01
 location: "Utrecht, The Netherlands"
 ---
 
-Sep-Nov 2021
+*Sep-Nov 2021*
+
 Class of 90 students
 
 Tasks:
-* Coordinate 4 Teaching Assistants
-* Prepare work lectures (slides & assignments)
-* Teach work lectures
-* Coordinate grading & retakes
+* Coordinating 4 Teaching Assistants
+* Preparing work lectures (slides & assignments)
+* Teaching work lectures
+* Coordinating grading & retakes
 * Grading
 * Administrative tasks
 
