--- a/_teaching/2021-22-blok2-IUW.md
+++ b/_teaching/2021-22-blok2-IUW.md
@@ -8,13 +8,14 @@ date: 2021-12-01
 location: "Utrecht, The Netherlands"
 ---
 
-Dec 2021-Feb 2022
+*Dec 2021-Feb 2022*
+
 Class of 140 students
 
 Tasks:
-* Coordinate 6 Teaching Assistants
-* Prepare work lectures (slides & assignments)
-* Coordinate grading & retakes
+* Coordinating 6 Teaching Assistants
+* Preparing work lectures (slides & assignments)
+* Coordinating grading & retakes
 * Administrative tasks
 
 Utrecht University course link: [link](https://osiris-student.uu.nl/#/onderwijscatalogus/extern/cursus?cursuscode=INFOB1IUW&taal=en&collegejaar=2021)
