--- a/_teaching/2021-22-blok3-OIS.md
+++ b/_teaching/2021-22-blok3-OIS.md
@@ -8,13 +8,14 @@ date: 2022-02-01
 location: "Utrecht, The Netherlands"
 ---
 
-Feb-Apr 2022
+*Feb-Apr 2022*
+
 Class of 174 students
 
 Tasks:
-* Coordinate 6 Teaching Assistants
-* Prepare work lectures (slides & assignments)
-* Coordinate grading
+* Coordinating 6 Teaching Assistants
+* Preparing work lectures (slides & assignments)
+* Coordinating grading
 * Grading
 * Administrative tasks
 
