--- a/_teaching/2022-23-blok1-AIS.md
+++ b/_teaching/2022-23-blok1-AIS.md
@@ -8,14 +8,14 @@ date: 2022-09-01
 location: "Utrecht, The Netherlands"
 ---
 
-Sep-Nov 2022
+*Sep-Nov 2022*
+
 Class of 106 students
 
 Tasks:
-* Give full lecture 'Music Recommender Systems'
-* Supervise 7 assignment groups
-* Grade assignments
-* Grade exam
+* Teaching full lecture 'Music Recommender Systems'
+* Supervising 7 assignment groups
+* Grading assignments
 * Administrative tasks
 
 Utrecht University course link: [link](https://osiris-student.uu.nl/#/onderwijscatalogus/extern/cursus?cursuscode=INFOMAIS&taal=en&collegejaar=2022)
