--- a/_teaching/2022-23-OZP.md
+++ b/_teaching/2022-23-OZP.md
@@ -8,6 +8,5 @@ date: 2023-01-01
 location: "Utrecht, The Netherlands"
 ---
 
-* 2022-2023: 1 student (ongoing)
-
+* 2022-2023: 2 students
 * 2021-2022: 1 student
