--- a/_teaching/2021-22-blok1-MMI.md
+++ b/_teaching/2021-22-blok1-MMI.md
@@ -8,7 +8,9 @@ date: 2021-09-01
 location: "Utrecht, The Netherlands"
 ---
 
-*Sep-Nov 2021*
+Involved in the course in '21/'22
+
+<u><b>Sep-Nov 2021</b></u>
 
 Class of 90 students
 
