--- a/_teaching/2022-23-blok1-AIS.md
+++ b/_teaching/2022-23-blok1-AIS.md
@@ -4,11 +4,22 @@ collection: teaching
 type: "Human Computer Interaction / Business Informatics master course"
 permalink: /teaching/2022-23-blok1-AIS
 venue: "Utrecht University"
-date: 2022-09-01
+date: 2023-09-01
 location: "Utrecht, The Netherlands"
 ---
 
-*Sep-Nov 2022*
+Involved in the course in '22/'23 and '23/'24
+
+<u><b>Oct 2023</b></u>
+
+Class of 93 students
+
+Tasks: 
+* Guest Lecture: Music Recommendation
+
+Utrecht University course link: [link](https://osiris-student.uu.nl/#/onderwijscatalogus/extern/cursus?cursuscode=INFOMAIS&taal=en&collegejaar=2023)
+
+<u><b>Sep-Nov 2022</b></u>
 
 Class of 106 students
 
