--- a/_teaching/2021-22-blok2-IUW.md
+++ b/_teaching/2021-22-blok2-IUW.md
@@ -8,7 +8,9 @@ date: 2021-12-01
 location: "Utrecht, The Netherlands"
 ---
 
-*Dec 2021-Feb 2022*
+Involved in the course in '21/'22
+
+<u><b>Dec 2021-Feb 2022</b></u>
 
 Class of 140 students
 
