--- a/_teaching/2021-22-blok3-OIS.md
+++ b/_teaching/2021-22-blok3-OIS.md
@@ -4,11 +4,39 @@ collection: teaching
 type: "Information Sciences 1st year bachelor course"
 permalink: /teaching/2021-22-blok3-OIS
 venue: "Utrecht University"
-date: 2022-02-01
+date: 2024-02-01
 location: "Utrecht, The Netherlands"
 ---
 
-*Feb-Apr 2022*
+Involved in the course in '21/'22, '22/'23, and '23/'24
+
+<u><b>Feb-Apr 2024</b></u>
+
+Tasks:
+* Teaching full lecture 'Ethics in Design'
+* Coordinating 7 Teaching Assistants
+* Preparing work lectures (slides & assignments)
+* Coordinating grading
+* Grading
+* Administrative tasks
+
+Utrecht University course link: [link](https://osiris-student.uu.nl/#/onderwijscatalogus/extern/cursus?cursuscode=INFOB1OIS&taal=en&collegejaar=2023)
+
+<u><b>Feb-Apr 2023</b></u>
+
+Class of 174 students
+
+Tasks:
+* Teaching full lecture 'Ethics in Design'
+* Coordinating 7 Teaching Assistants
+* Preparing work lectures (slides & assignments)
+* Coordinating grading
+* Grading
+* Administrative tasks
+
+Utrecht University course link: [link](https://osiris-student.uu.nl/#/onderwijscatalogus/extern/cursus?cursuscode=INFOB1OIS&taal=en&collegejaar=2022)
+
+<u><b>Feb-Apr 2022</b></u>
 
 Class of 174 students
 
