--- a/_talks/2023-09-22-nus.md
+++ b/_talks/2023-09-22-nus.md
@@ -10,4 +10,4 @@ location: "Singapore, Singapore"
 
 Invited talk in the Music Recommender Systems Workshop at the Sound & Music Computing Lab (SMC), National University of Singapore (NUS).
 This seminar was chaired by Prof. Ye Wang and was open to faculties and students of School of Computing.
-More and a recording of the talk are accessible [here](https://smcnus.comp.nus.edu.sg/music_recommender_system_workshop_2023).
+More information and a recording of the talk are accessible [here](https://smcnus.comp.nus.edu.sg/music_recommender_system_workshop_2023).
