--- a/_talks/2023-12-14-dbwrs.md
+++ b/_talks/2023-12-14-dbwrs.md
@@ -1,7 +1,7 @@
 ---
 title: "Amplifying Artists’ Voices​: Item Provider Perspectives on Influence and Fairness​ of Music Streaming Platforms​"
 collection: talks
-type: "Invited talk"
+type: "Lightening talk"
 permalink: /talks/2023-12-14-dbwrs
 venue: "Dutch-Belgian Workshop on Recommender Systems"
 date: 2023-12-14
