--- a/_teaching/2022-23-OZP.md
+++ b/_teaching/2022-23-OZP.md
@@ -2,11 +2,13 @@
 title: "Information Sciences Bachelor thesis supervision"
 collection: teaching
 type: "Supervision"
-permalink: /teaching/2022-23-OZP
+permalink: /teaching/2022-25-OZP
 venue: "Utrecht University"
-date: 2023-01-01
+date: 2025-01-14
 location: "Utrecht, The Netherlands"
 ---
 
+* 2024-2025: 3 students
+* 2023-2024: 2 students
 * 2022-2023: 2 students
 * 2021-2022: 1 student
