--- a/_teaching/2022-23-blok1-AIS.md
+++ b/_teaching/2022-23-blok1-AIS.md
@@ -1,14 +1,27 @@
 ---
-title: "Adaptive interactive systems"
+title: "Adaptive Interactive Systems"
 collection: teaching
 type: "Human Computer Interaction / Business Informatics master course"
-permalink: /teaching/2022-23-blok1-AIS
+permalink: /teaching/2022-25-blok1-AIS
 venue: "Utrecht University"
-date: 2023-09-01
+date: 2024-09-01
 location: "Utrecht, The Netherlands"
 ---
 
-Involved in the course in '22/'23 and '23/'24
+Involved in the course in '22/'23, '23/'24, and '24/'25
+
+<u><b>Sep-Nov 2024</b></u>
+
+Class of 57 students
+
+Tasks:
+* Teaching full lecture 'Music Recommender Systems'
+* Making and grading exam questions
+* Supervising 7 assignment groups
+* Grading assignments
+* Administrative tasks
+
+Utrecht University course link: [link](https://osiris-student.uu.nl/#/onderwijscatalogus/extern/cursus?cursuscode=INFOMAIS&taal=en&collegejaar=2024)
 
 <u><b>Oct 2023</b></u>
 
