--- a/_teaching/2023-25-blok2-SMT.md
+++ b/_teaching/2023-25-blok2-SMT.md
@@ -2,13 +2,21 @@
 title: "Sound & Music Technology"
 collection: teaching
 type: "Game and Media Technology master course"
-permalink: /teaching/2023-24-blok1-SMT
+permalink: /teaching/2023-25-blok2-SMT
 venue: "Utrecht University"
-date: 2023-11-30
+date: 2024-11-28
 location: "Utrecht, The Netherlands"
 ---
 
-Involved in the course in '23/'24
+Involved in the course in '23/'24 and '24/'25
+
+<u><b>Nov 2024</b></u>
+
+Tasks: 
+* Guest Lecture: Music Recommender Systems
+
+Utrecht University course link: [link](https://osiris-student.uu.nl/onderwijscatalogus/extern/cursus?cursuscode=INFOMSMT&taal=en&collegejaar=2024)
+
 
 <u><b>Nov 2023</b></u>
 
