Add navigation info

--- a/_teaching/2021-24-blok3-OIS.md
+++ b/_teaching/2021-24-blok3-OIS.md
@@ -8,7 +8,7 @@ date: 2024-02-01
 location: "Utrecht, The Netherlands"
 ---
 
-Involved in the course in '21/'22, '22/'23, and '23/'24
+Involved in the course in '21/'22, '22/'23, and '23/'24 (click for list of tasks)
 
 <u><b>Feb-Apr 2024</b></u>
 
