--- a/_teaching/2021-22-blok1-MMI.md
+++ b/_teaching/2021-22-blok1-MMI.md
@@ -8,7 +8,7 @@ date: 2021-09-01
 location: "Utrecht, The Netherlands"
 ---
 
-Involved in the course in '21/'22
+Involved in the course in '21/'22 (click for list of tasks)
 
 <u><b>Sep-Nov 2021</b></u>
 
