--- a/_teaching/2021-22-blok2-IUW.md
+++ b/_teaching/2021-22-blok2-IUW.md
@@ -8,7 +8,7 @@ date: 2021-12-01
 location: "Utrecht, The Netherlands"
 ---
 
-Involved in the course in '21/'22
+Involved in the course in '21/'22 (click for list of tasks)
 
 <u><b>Dec 2021-Feb 2022</b></u>
 
