--- a/_teaching/2022-23-blok1-AIS.md
+++ b/_teaching/2022-23-blok1-AIS.md
@@ -8,7 +8,7 @@ date: 2024-09-01
 location: "Utrecht, The Netherlands"
 ---
 
-Involved in the course in '22/'23, '23/'24, and '24/'25
+Involved in the course in '22/'23, '23/'24, and '24/'25 (click for list of tasks)
 
 <u><b>Sep-Nov 2024</b></u>
 
